--- a/ET-Tox/train_yaml/ld50.yaml
+++ b/ET-Tox/train_yaml/ld50.yaml
@@ -1,4 +1,4 @@
-hyperparameter_tuning: false
+# hyperparameter_tuning: false
 
 
 test_run: false
@@ -9,7 +9,7 @@ save_top_k: 1 #save the best model only
 
 
 activation: silu
-atom_filter: -1
+# atom_filter: -1
 attn_activation: silu
 batch_size: 32
 inference_batch_size: 32
@@ -21,21 +21,21 @@ ngpus: -1
 
 wandb: false
 
-model: equivariant-transformer
+model: equivariant-transformer-edge #equivariant-transformer
 #change when using ET
 
-diffusion_pretraining: false
-emgp_pretraining: false
-position_noise_scale: 0.
-denoising_weight: 0.
-denoising: false
+# diffusion_pretraining: false
+# emgp_pretraining: false
+# position_noise_scale: 0.
+# denoising_weight: 0.
+# denoising: false
 
 linear_probing: false
-finetune_output: false
-load_pretrained: false
-pretrained_model: null
+# finetune_output: false
+# load_pretrained: false
+# pretrained_model: null
 
-toxicity_prediction: true
+# toxicity_prediction: true
 toxicity_weight: 1.0
 energy_tox_multi_task: false
 use_energy_feature: false
@@ -73,8 +73,8 @@ dataset_root: ./data/TDCTox
 #change for downstream pediction
 
 #TensorNet
-num_linears_tensor: 1
-num_linears_scalar: 2
+# num_linears_tensor: 1
+# num_linears_scalar: 2
 
 #ET
 num_heads: 8
