--- a/ET-Tox/train_yaml/toxcast.yaml
+++ b/ET-Tox/train_yaml/toxcast.yaml
@@ -1,4 +1,4 @@
-hyperparameter_tuning: false
+# hyperparameter_tuning: false
 
 test_run: false
 test_checkpoint: ./models/toxcast.ckpt
@@ -9,10 +9,10 @@ save_top_k: 1 #save the best model only
 
 
 activation: silu
-atom_filter: -1
+# atom_filter: -1
 attn_activation: silu
-batch_size: 8
-inference_batch_size: 8
+batch_size: 4
+inference_batch_size: 4
 test_size: 0.1
 train_size: 0.8
 val_size: 0.1
@@ -21,24 +21,26 @@ ngpus: -1
 
 wandb: false
 
-model: equivariant-transformer
+model: equivariant-transformer-edge #equivariant-transformer
+use_n_gram: false
+use_edge_attention: true
 #change when using ET
 
-diffusion_pretraining: false
-emgp_pretraining: false
-position_noise_scale: 0.
-denoising_weight: 0.
-denoising: false
+# diffusion_pretraining: false
+# emgp_pretraining: false
+# position_noise_scale: 0.
+# denoising_weight: 0.
+# denoising: false
 
 linear_probing: false
-finetune_output: false
-load_pretrained: false
-load_from_diffusion: false
-pretrained_model: /workspace7/torchmd-net/test_drugs/epoch=79-val_loss=-269.1461-test_loss=0.0000.ckpt
+# finetune_output: false
+# load_pretrained: false
+# load_from_diffusion: false
+# pretrained_model: /workspace7/torchmd-net/test_drugs/epoch=79-val_loss=-269.1461-test_loss=0.0000.ckpt
 
-toxicity_prediction: true
+# toxicity_prediction: true
 toxicity_weight: 1.0
-energy_tox_multi_task: false
+# energy_tox_multi_task: false
 use_energy_feature: false
 use_smiles: false
 
@@ -70,12 +72,12 @@ max_len_smiles: 325
 output_channels_toxicity: 617
 dataset: MoleculeNet
 dataset_arg: {num_conformers: 1, conformer: best, data_version: geom, dataset: toxcast}
-dataset_root: /workspace7/GEOM/molecule_net
+dataset_root: ./data/MoleculeNet
 #change for downstream pediction
 
 #TensorNet
-num_linears_tensor: 1
-num_linears_scalar: 2
+# num_linears_tensor: 1
+# num_linears_scalar: 2
 
 #ET
 num_heads: 8
@@ -110,7 +112,7 @@ num_epochs: 3000
 
 num_nodes: 1
 num_workers: 12
-precision: 32
+precision: 16 #32
 rbf_type: expnorm
 redirect: false
 reduce_op: add
